--- a/taau/source/app/views/layouts/application.html.erb
+++ b/taau/source/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
   <body ng-app="stalchild">
 
     <%= render 'layouts/header' %>
+    <%= render 'layouts/login' %>
 
     <div class="container" ng-view>
       <%= yield %>
