--- a/taau/source/app/views/layouts/_header.html.erb
+++ b/taau/source/app/views/layouts/_header.html.erb
@@ -1,7 +1,4 @@
-<div
-  class="flex-column align-items-center bg-light border-bottom shadow-sm"
-  ng-controller="Global.HeaderController as headerController">
-
+<div class="flex-column align-items-center bg-light border-bottom shadow-sm" ng-controller="Global.HeaderController as headerController">
   <nav class="navbar navbar-expand-sm navbar-light bg-light">
     <a class="navbar-brand" href="#/">
       Stalchild
@@ -18,22 +15,25 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
-        <li class="nav-item p-2" ng-hide="headerController.logged">
+        <li class="nav-item p-2">
+          <a href="#/" class="nav-link text-dark">New link</a>
+        </li>
+      </ul>
+      <ul class="nav navbar-nav">
+        <li ng-hide="headerController.logged">
           <a
             ng-hide="headerController.ongoing"
             data-toggle="modal"
             href="#"
-            class="nav-link text-dark"
-            data-target="#loginModal">
+            data-target="#login-modal">
             Login
           </a>
         </li>
-        <li class="nav-item p-2" ng-show="headerController.logged">
+        <li ng-show="headerController.logged">
           <a
             ng-hide="headerController.ongoing"
             data-toggle="modal"
             href="#"
-            class="nav-link text-dark"
             ng-click="headerController.logoff()">
             Logoff
           </a>
