--- a/taau/source/app/views/layouts/_login.html.erb
+++ b/taau/source/app/views/layouts/_login.html.erb
@@ -1,35 +1,24 @@
-<div
-  class="modal fade"
-  id="loginModal"
-  tabindex="-1"
-  role="dialog"
-  aria-labelledby="loginModal"
-  aria-hidden="true"
+<div class="modal fade" tabindex="-1" role="dialog" id="login-modal"
   ng-controller="Login.Controller as loginController">
-
   <div class="modal-dialog" role="document">
     <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="loginModalLabel">Login</h5>
-        <button
-          type="button"
-          class="close"
-          data-dismiss="modal"
-          aria-label="Close"
-          ng-click="loginController.clear()">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
+      <form ng-controller="Login.Controller as loginController">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"
+            ng-click="loginController.clear()">
+            <span aria-hidden="true">&times;</span>
+          </button>
+          <h4 class="modal-title">Login</h4>
+        </div>
         <div class="alert alert-danger" ng-show="loginController.incorrect">
-          Invalid User/Password
+          User name or password incorrect.
         </div>
         <div class="alert alert-danger" ng-show="loginController.error">
-          Unexpected error happened
+          An unexpected error occourred, please try again later
         </div>
         <div class="modal-body">
           <div class="form-group">
-            <label for="login">Login</label>
+            <label for="login">Username</label>
             <input
                    type="text"
                    class="form-control"
@@ -46,26 +35,24 @@
                    placeholder="Senha"
                    ng-model="loginController.password">
           </div>
-
         </div>
-      </div>
-      <div class="modal-footer">
-        <button
-           ng-click="loginController.clear()"
-           type="button"
-           class="btn btn-default"
-           data-dismiss="modal">
-          Cancel
-        </button>
-        <button
-           type="submit"
-           class="btn btn-primary"
-           ng-disabled="loginController.ongoing"
-           ng-click="loginController.submit()">
-          Login
-        </button>
-      </div>
-    </div>
-  </div>
-</div>
-
+        <div class="modal-footer">
+          <button
+             type="button"
+             ng-click="loginController.clear()"
+             class="btn btn-default"
+             data-dismiss="modal">
+            Cancel
+          </button>
+          <button
+             type="submit"
+             class="btn btn-primary"
+             ng-disabled="loginController.ongoing"
+             ng-click="loginController.submit()">
+            Login
+          </button>
+        </div>
+      </form>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
