--- a/taau/source/app/views/layouts/_header.html.erb
+++ b/taau/source/app/views/layouts/_header.html.erb
@@ -16,12 +16,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item p-2">
-          First Link
+          <a class="nav-link" href="#">First Link</a>
         </li>
       </ul>
       <ul class="nav navbar-nav">
         <li ng-hide="headerController.logged">
           <a
+            class="nav-link"
             ng-hide="headerController.ongoing"
             data-toggle="modal"
             href="#"
@@ -31,6 +32,7 @@
         </li>
         <li ng-show="headerController.logged">
           <a
+            class="nav-link"
             ng-hide="headerController.ongoing"
             data-toggle="modal"
             href="#"
