--- a/taa/source/app/views/layouts/_header.html.erb
+++ b/taa/source/app/views/layouts/_header.html.erb
@@ -16,7 +16,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item p-2">
-          <a href="#/" class="nav-link text-dark">New link</a>
+          <a class="nav-link" href="#">First Link</a>
         </li>
       </ul>
     </div>
