Remove action from link

--- a/taau/source/app/views/layouts/_header.html.erb
+++ b/taau/source/app/views/layouts/_header.html.erb
@@ -25,7 +25,7 @@
             class="nav-link"
             ng-hide="headerController.ongoing"
             data-toggle="modal"
-            href="#"
+            href=""
             data-target="#login-modal">
             Login
           </a>
@@ -35,7 +35,7 @@
             class="nav-link"
             ng-hide="headerController.ongoing"
             data-toggle="modal"
-            href="#"
+            href=""
             ng-click="headerController.logoff()">
             Logoff
           </a>
